# forkjoin

./: .gitignore  .travis.yml  Cargo.toml  README.md
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: lib.rs  poolsupervisor.rs  workerthread.rs
tests/: fib.rs  mut_inc_one.rs  nqueens_search.rs  nqueens_summa.rs  quicksort.rs  sumtree.rs
